# telegram-physical-shop

./: Dockerfile  README.md  bot_cli.py  docker-compose.databases.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  run.py
bot/: main.py
bot/caching/: scheduler.py
bot/config/: env.py  storage.py
bot/database/: dsn.py  main.py
bot/database/models/: main.py
bot/handlers/admin/: __init__.py  adding_position_states.py  settings_management.py  wallets.py
bot/handlers/user/: main.py  order_handler.py  reference_code_handler.py  shop_and_goods.py
bot/i18n/: strings.py
bot/keyboards/: inline.py
bot/monitoring/: dashboard.py  recovery.py
bot/payments/: bitcoin.py  crypto.py  prices.py  testnet_wallet.py  wallets.py
bot/payments/checkers/: __init__.py  base.py  bitcoin.py  ethereum.py  litecoin.py  solana.py  tron.py
bot/referrals/: codes.py
bot/states/: user_state.py
bot/tasks/: address_feeder.py  file_watcher.py  payment_checker.py
config/: btc_addresses.txt  sol_addresses.txt  trx_addresses.txt
documentation/changes/: adding-multiple-currencies-support.md  aiogram-and-db-fixes.md
scripts/: migrate_orders.py
