[project]
name = "telegram-physical-shop"
version = "0.1.0"
description = "Telegram physical shop bot"
requires-python = ">=3.12,<4"
dependencies = [
    "aiogram>=3.22.0,<4",
    "SQLAlchemy>=2.0.43,<3",
    "aiohttp>=3.12.0,<4",
    "redis>=6.4.0,<7",
    "pydantic>=2.5.0,<3",
    "python-dotenv>=1.0.0,<2",
    "cryptography>=41.0.0,<43",
    "python-dateutil>=2.8.2,<3",
    "watchdog>=6.0.0,<7",
    "pytz>=2025.2",
    "bip-utils>=2.9.3,<3",
    "Pillow>=10.0.0,<12",
    "web3 (>=7.15.0,<8.0.0)",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9,<3"]
test = [
    "pytest>=8.4.0,<9",
    "pytest-asyncio>=1.1.0,<2",
    "pytest-cov>=4.1.0,<5",
    "pytest-mock>=3.12.0,<4",
]

[project.scripts]
start = "run:main"

[tool.poetry]
packages = [{include = "bot"}, {include = "run.py"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
